# csgo_winner_prediction

./: README.md
apps/django/admin_panel/: README.md
apps/fastapi/analytics/: README.md
apps/fastapi/csgo_winner_prediction/: README.md
etl/mongo_to_clickhouse/: README.md
etl/mongo_to_postgres/: README.md
etl/raw_to_mongo/: .pre-commit-config.yaml  README.md  docker-compose.dev.yaml  pyproject.toml
etl/raw_to_mongo/env.example/docker/: .env.dev
etl/raw_to_mongo/src/: main.py  pyproject.toml
etl/raw_to_mongo/src/core/: config.py  logger.py
etl/raw_to_mongo/src/raw/: 1.json  10.json  1000.json  10000.json  10003.json  10004.json  10007.json  10008.json  10009.json  10010.json  10012.json  10014.json  10015.json  10016.json  10017.json  10018.json  10021.json  10022.json  10023.json  10024.json  10025.json  10026.json  10028.json  10031.json  10032.json  10033.json  10034.json  10036.json  10038.json  10043.json  10046.json  10047.json  10049.json  10052.json  10054.json  10058.json  10059.json  1006.json  10063.json  10065.json  (+28187 more)
etls/mongo_to_clickhouse/: .env.example  docker-compose.dev.yaml
etls/mongo_to_clickhouse/app/src/: Dockerfile.dev  docker-entrypoint.dev.sh  docker-entrypoint.sh  main.py  pyproject.toml
etls/mongo_to_clickhouse/app/src/core/: config.py
etls/mongo_to_clickhouse/env.example/mongo/: .env.dev
etls/raw_to_mongo/: docker-compose.dev.yaml
etls/raw_to_mongo/app/src/: Dockerfile  main.py
ml/: README.md
ml/feature_extraction/: README.md
ml/prediction/: README.md
ml/team_player_game_history_aggregation/: README.md
(+28266 files in other folders)
